<resources>
    <string name="app_name" translatable="false">Sehat</string>
    <string name="SelamatDatang">Selamat Datang</string>
    <string name="Indonesia">Indonesia</string>
    <string name="Hidup_SehatnDimulai_Dari_Sini">Hidup Sehat\nDimulai Dari Sini</string>
    <string name="HealthyMe">HealthyMe</string>
    <string name="welcome_message">Selamat Datang\nDi Sehat</string>
    <string name="onboarding_subtitle">Catat kebiasaan sehatmu\nsetiap hari untuk\nhasil maksimal</string>
    <string name="add_habit">Tambah \nKebiasaan</string>
    <string name="name_habbit">Nama Aktivitas</string>
    <string name="desciption">Deskripsi</string>
    <string name="fill">Isi deskripsi... (opsional)</string>
    <string name="time">Waktu</string>
    <string name="choose_time">Pilih Waktu</string>
    <string name="save">Simpan</string>
    <string name="dashboard">Dashboard</string>
    <string name="steps">Langkah</string>
    <string name="water">Asupan Air</string>
    <string name="calories">Kalori</string>
    <string name="sleeps">Tidur</string>
    <string name="today">Hari ini kamu sudah minum 3 gelas air. Yuk tambah lagi!</string>
    <string name="add">"+ Tambah</string>
    <string name="login">Masuk</string>
    <string name="sign_up">Daftar</string>
    <string name="progress">Progress Tracker</string>
    <string name="congrats">Selamat!</string>
    <string name="Consistent">Kamu Konsisten Sehat Selama 7 Hari Berturut - turut</string>
    <string name="weekly_progress">Progres Mingguan</string>
    <string name="activity">Aktivitas Berhasil</string>
    <string name="activitys">Aktivitas olahraga telah ditambahkan ke catatan harianmu: Joging 30 menit</string>
    <string name="act">Aktivitas</string>
    <string name="done">telah ditambahkan ke catatan harianmu.</string>
    <string name="ok">OK</string>
</resources>