<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFC2D1">

    <TextView
        android:id="@+id/tv_logo_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="47dp"
        android:layout_marginTop="73dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_confirmation"
        android:layout_width="338dp"
        android:layout_height="480dp"
        android:layout_centerInParent="true"
        app:cardBackgroundColor="#FAA5BB"
        app:cardCornerRadius="39dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="476dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="20dp">

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="40dp"
                app:cardCornerRadius="50dp"
                app:cardElevation="0dp">

                <ImageView
                    android:id="@+id/iv_success_icon"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_success_check" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/activity"
                android:textColor="#FFFFFF"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_dynamic_message"
                android:layout_width="309dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="center"
                android:text="@string/activitys"
                android:textColor="#FFFFFF"
                android:textSize="22sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_ok"
        android:layout_width="330dp"
        android:layout_height="72dp"
        android:layout_below="@id/card_confirmation"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg_button_white_translucent"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/ok"
        android:textAllCaps="false"
        android:textColor="#FFC2D1"
        android:textSize="32sp"
        android:textStyle="bold" />

</RelativeLayout>