<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFC2D1"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="40dp">

        <TextView
            android:id="@+id/tv_title_tracker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/progress"
            android:textColor="#FFFFFF"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_congrats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_title_tracker"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/congrats"
            android:textColor="#FFFFFF"
            android:textSize="32sp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_streak"
            android:layout_width="375dp"
            android:layout_height="184dp"
            android:layout_below="@id/tv_congrats"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            app:cardBackgroundColor="#FAA5BB"
            app:cardCornerRadius="39dp"
            app:cardElevation="0dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/Consistent"
                android:textColor="#FFFFFF"
                android:textSize="28sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_weekly"
            android:layout_width="375dp"
            android:layout_height="278dp"
            android:layout_below="@id/card_streak"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            app:cardBackgroundColor="#FAA5BB"
            app:cardCornerRadius="39dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/weekly_progress"
                    android:textColor="#FFFFFF"
                    android:textSize="28sp" />

                <ImageView
                    android:id="@+id/iv_graph_placeholder"
                    android:layout_width="285dp"
                    android:layout_height="171dp"
                    android:layout_marginTop="10dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_weekly_chart" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </RelativeLayout>
</ScrollView>