<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="412dp"
    android:layout_height="1000dp"
    android:background="#FFC2D1"
    android:clipChildren="true">


    <TextView
        android:id="@+id/tv_dashboard_title"
        android:layout_width="230dp"
        android:layout_height="60dp"
        android:layout_marginLeft="39dp"
        android:layout_marginTop="78dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/dashboard"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="150dp"
        android:layout_height="170dp"
        android:layout_marginLeft="37dp"
        android:layout_marginTop="204dp"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="25dp"
        app:cardElevation="0dp">

        <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent">
            <ImageView
                android:layout_width="48dp"
                android:layout_height="63dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="22dp"
                android:src="@drawable/ic_steps"
                app:tint="#FFC2D1" />

            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="90dp"
            android:text="@string/steps"
            android:textColor="#FFC2D1"
            android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="121dp"
                android:text="7.680"
                android:textColor="#FFC2D1"
                android:textSize="30sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="147dp"
        android:layout_height="172dp"
        android:layout_marginLeft="223dp"
        android:layout_marginTop="204dp"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="25dp"
        app:cardElevation="0dp">

        <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent">
            <ImageView
                android:layout_width="48dp"
                android:layout_height="63dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="24dp"
                android:src="@drawable/ic_water"
                app:tint="#FFC2D1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="93dp"
                android:text="@string/water"
                android:textColor="#FFC2D1"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="123dp"
                android:text="3/ Gelas"
                android:textColor="#FFC2D1"
                android:textSize="26sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="150dp"
        android:layout_height="175dp"
        android:layout_marginLeft="37dp"
        android:layout_marginTop="420dp"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="25dp"
        app:cardElevation="0dp">

        <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent">
            <ImageView
                android:layout_width="62dp"
                android:layout_height="72dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic_calori"
                app:tint="#FFC2D1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="91dp"
                android:text="@string/calories"
                android:textColor="#FFC2D1"
                android:textSize="22sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="124dp"
                android:text="1.254 kcal"
                android:textColor="#FFC2D1"
                android:textSize="26sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="158dp"
        android:layout_height="175dp"
        android:layout_marginLeft="219dp"
        android:layout_marginTop="420dp"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="25dp"
        app:cardElevation="0dp">

        <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent">
            <ImageView
                android:layout_width="72dp"
                android:layout_height="71dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:src="@drawable/ic_sleep"
                app:tint="#FFC2D1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="82dp"
                android:text="@string/sleeps"
                android:textColor="#FFC2D1"
                android:textSize="22sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="111dp"
                android:text="6 j 45 m"
                android:textColor="#FFC2D1"
                android:textSize="26sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_motivation"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="629dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/today"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_tambah"
        android:layout_width="330dp"
        android:layout_height="72dp"
        android:layout_marginLeft="41dp"
        android:layout_marginTop="778dp"
        android:background="@drawable/bg_rounded_input"
        android:text="@string/add"
        android:textAllCaps="false"
        android:textColor="#FFC2D1"
        android:textSize="32sp"
        android:textStyle="bold" />

</RelativeLayout>