<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFC2D1"
    tools:context=".OnboardingActivity">

    <!-- 1. Header Text: Selamat Datang Di HealthyMe -->
    <TextView
        android:id="@+id/tvWelcomeHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="210dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/welcome_message"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- 2. Informasi Utama (Latar Belakang Card #FAA5BB) -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardInfo"
        android:layout_width="0dp"
        android:layout_height="161dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="40dp"
        app:cardBackgroundColor="#FAA5BB"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvWelcomeHeader">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/poppins_semibold"
            android:paddingStart="20dp"
            android:paddingTop="28dp"
            android:paddingEnd="16dp"
            android:text="@string/onboarding_subtitle"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold" />

        <!-- Placeholder untuk Image/Ilustrasi (Rectangle_21) -->

    </androidx.cardview.widget.CardView>


    <!-- 3. Tombol Login -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardLogin"
        android:layout_width="180dp"
        android:layout_height="72dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="50dp"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="40dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/login"
            android:textColor="#FFC2D1"
            android:textSize="26sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <!-- 4. Tombol Sign Up -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardSignUp"
        android:layout_width="180dp"
        android:layout_height="72dp"
        android:layout_marginEnd="24dp"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="40dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="@id/cardLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/cardLogin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/sign_up"
            android:textColor="#FFC2D1"
            android:textSize="26sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="309dp"
        android:layout_height="265dp"
        android:contentDescription="Ilustrasi"
        android:src="@drawable/ic_dashboard_illustration"
        app:layout_constraintBottom_toTopOf="@+id/cardLogin"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
